# MCP-Demo

./: README.md  pyproject.toml  requirements.txt
server/: .env  app.py  calc.json  calc.py  client.py  test.py  weather.py
server/static/: script.js  style.css
server/templates/: index.html
