[project]
name = "mcpdemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.3",
    "fastapi>=0.110.0",
    "mcp-use>=1.3.0",
    "langchain-groq>=0.3.2",
    "nest-asyncio>=1.6.0",
    "flask>=3.1.1",
    "langchain-openai>=0.3.22",
    "langchain-ollama>=0.3.3",
    "async-timeout>=5.0.1",
]
